[gd_scene load_steps=9 format=2]

[ext_resource path="res://components/harvester/module_chooser_popup/ModuleChooserPopup.gd" type="Script" id=1]
[ext_resource path="res://components/harvester/module_chooser_popup/arrow_left.PNG" type="Texture" id=2]
[ext_resource path="res://components/harvester/module_chooser_popup/arrow_right.PNG" type="Texture" id=3]
[ext_resource path="res://assets/arrows/red/arrow_left_red.PNG" type="Texture" id=4]
[ext_resource path="res://assets/arrows/red/arrow_left_click_red.PNG" type="Texture" id=5]
[ext_resource path="res://assets/arrows/red/arrow_left_hover_red.PNG" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ModuleChooserPopup" type="PopupPanel"]
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 258.0
margin_bottom = 200.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 200.0

[node name="Prev" type="TextureButton" parent="HBoxContainer/CenterContainer"]
margin_top = 75.0
margin_right = 50.0
margin_bottom = 125.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( 20, 0 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 2 )

[node name="MarginContainer" type="Panel" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 204.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 200 )
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 200.0

[node name="Next" type="TextureButton" parent="HBoxContainer/CenterContainer2"]
margin_top = 75.0
margin_right = 50.0
margin_bottom = 125.0
rect_min_size = Vector2( 40, 0 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[connection signal="about_to_show" from="." to="." method="_on_ModuleChooserPopup_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PartChooserPopup_popup_hide"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/Next" to="." method="_on_Next_pressed"]
